# sms-mcp-server

./: .gitignore  LICENSE  README.md  main.py  mcp-config.json  mcp-metadata.json  mcp_server.py  package.json  parse_phone_data.py  pyproject.toml  requirements.txt
tests/: run_tests.py  test_carrier_detection.py  test_data_parser.py  test_mcp_client.py  test_mcp_integration.py  test_mcp_server.py  test_server_start.py
